tests/expectations/compiler/group/no_space_between_literal.out
Error [EPAR0370005]: expected ';' -- found 'group'
    --> compiler-test:4:22
     |
   4 |     let g: group = 1 group;
     |                      ^^^^^
